--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos</h1>
         </header>
         <article>
-            <h2>artigo 001</h2>
-            <p>texto do artigo 001</p>
+            <h2>Curso de Python</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est suscipit magnam reiciendis quisquam vel obcaecati minus corporis tenetur fuga quod? Commodi id at mollitia eligendi quasi saepe dolores voluptates eos.</p>
         </article>
         <article>
-            <h2>artigo 002</h2>
-            <p>texto do artigo 002</p>
+            <h2>Curso de Java</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti excepturi aliquid quia quis, incidunt dolores quas aspernatur atque autem soluta facere rerum voluptas dignissimos est non, praesentium corporis dolore facilis.</p>
         </article>
     </main>
 </body>
